--- a/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
@@ -456,7 +456,7 @@ else if(!(Model.PageSubmit == "true"))
             <h3 class="mrgn-tp-0">@Localizer["Question1"]</h3>
             <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="routedatacompare" asp-page="../../../CCGMember/Compare/AllObjective">@Localizer["Compare"]</a>
             <button class="btn btn-primary mrgn-rght-md">@Localizer["Similar"]</button>
-            <p><a style="text-decoration:none" title="@Localizer["infocomparesimilar"]" href="#info" aria-controls="mid-screen" class="overlay-lnk" role="button"><small>@Localizer["infocomparesimilar"]</small></a></p>
+            <!-- <p><a style="text-decoration:none" title="@Localizer["infocomparesimilar"]" href="#info" aria-controls="mid-screen" class="overlay-lnk" role="button"><small>@Localizer["infocomparesimilar"]</small></a></p>
             <section id="info" class="wb-overlay modal-content overlay-def wb-popup-mid">
                 <header class="modal-header">
                     <h2 class="modal-title">@Localizer["Compare Function"]</h2>
@@ -474,7 +474,7 @@ else if(!(Model.PageSubmit == "true"))
                     @Localizer["modalsimilar"]
                     <button class="btn btn-primary pull-left">@Localizer["contsimilar"]</button> <button class="btn btn-default pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
                 </div>
-            </section>
+            </section> -->
         </div>
 
         <table class="table table-hover table-bordered mrgn-tp-md" width="100%" border="0" cellspacing="0" cellpadding="0">
