--- a/Web/Pages/Overview.cshtml
+++ b/Web/Pages/Overview.cshtml
@@ -26,4 +26,4 @@
     <h2>@Localizer["Competencies"]</h2>
     <p>@Localizer["CompText"]</p>
 </div>
-<a class="btn btn-primary pull-left" asp-page="Homepage">@Localizer["continue"]</a>
+<a class="btn btn-primary pull-left" asp-page="Index">@Localizer["continue"]</a>
