--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -1,4 +1,5 @@
-﻿@page 
+﻿@page
+
 @inject IViewLocalizer Localizer
 @model Web.Pages.CCGMember.AllPositionsModel
 @{
@@ -20,7 +21,7 @@
     <nav role="navigation">
         <h2 class="wb-inv">Document navigation</h2>
         <ul class="pager">
-            <li class="previous"><a asp-page="../Homepage" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+            <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
         </ul>
     </nav>
 
@@ -34,19 +35,9 @@
             </div>
         </div>
     </div>
-
-
-    <div class="col-md-12">
-
-        <form>
-            <p class="mrgn-bttm-xl">
-                <input type="text" asp-for="Filter" />
-                <input type="submit" text=@Localizer["Keywords"] value=@Localizer["Filter"] />
-            </p>
-        </form>
         <form>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 mrgn-tp-lg">
                     <ul class="list-unstyled row wb-eqht">
                         @if (Model.JobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower()) || e.NameFre.ToLower().Contains(@Model.Filter.ToLower()) || e.Code.ToLower().Contains(@Model.Filter.ToLower())))
                         {
@@ -81,7 +72,6 @@
                 </div>
             </div>
         </form>
-    </div>
     <!--    <div style="clear:both;">
             <div class="col-lg-12">
                 <nav role="navigation">
@@ -94,4 +84,3 @@
         </div>
     -->
 </section>
-
