--- a/Web/Pages/Student/HighSchool/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Index.cshtml
@@ -39,18 +39,20 @@
 
     <div class="row wb-eqht wb-init mrgn-tp-md">
         <div class="col-sm-6">
-            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 394px;">
+            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 420px;">
                 <h3 class="mrgn-tp-0">@Localizer["Shoreside"]</h3>
                 <p>@Localizer["textshoreside"]</p>
-                <a asp-page="Shoreside/Index" alt="@Localizer["altsearchshoreside"]" class="btn btn-primary">@Localizer["shoresidebutton"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" asp-page="Shoreside/Index" alt="@Localizer["altsearchshoreside"]" class="btn btn-primary">@Localizer["shoresidebutton"]</a>
             </div>
         </div>
 
         <div class="col-sm-6">
-            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 394px;">
+            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 420px;">
                 <h3 class="mrgn-tp-0">@Localizer["Seagoing"]</h3>
                 <p>@Localizer["textseagoing"]</p>
-                <a asp-page="Seagoing/Index" alt="@Localizer["altsearchseagoing"]" class="btn btn-primary">@Localizer["seagoingbutton"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" asp-page="Seagoing/Index" alt="@Localizer["altsearchseagoing"]" class="btn btn-primary">@Localizer["seagoingbutton"]</a>
             </div>
         </div>
     </div>
