--- a/Web/Pages/Student/HighSchool/Seagoing/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Seagoing/Index.cshtml
@@ -25,8 +25,17 @@
             <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
         </ul>
     </nav>
+    <div class="cct-HS-sea-img cct-HS-sea-hide-mobile cct-HS-sea-hide-tablet">
+        <div class="container">
+            <div class="row mrgn-tp-lg mrgn-bttm-lg">
+                <div class="col-md-7">
+                    <h2>@Localizer["Q1"]</h2>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
 
-    <h2 class="mrgn-bttm-lg">@Localizer["Q1"]</h2>
     <div class="row">
         <div class="col-sm-12">
             <ul class="list">
