--- a/Web/Pages/Student/University/Seagoing/Index.cshtml
+++ b/Web/Pages/Student/University/Seagoing/Index.cshtml
@@ -24,7 +24,17 @@
             <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
         </ul>
     </nav>
-    <h2 class="mrgn-bttm-lg">@Localizer["Q1"]</h2>
+
+    <div class="cct-U-seagoing-img cct-U-seagoing-hide-mobile cct-U-seagoing-hide-tablet">
+        <div class="container">
+            <div class="row mrgn-tp-lg mrgn-bttm-lg">
+                <div class="col-md-7">
+                    <h2>@Localizer["Q1"]</h2>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm-12">
             <ul class="list">
