--- a/Web/Pages/Candidate/Index.cshtml
+++ b/Web/Pages/Candidate/Index.cshtml
@@ -34,12 +34,13 @@
         </div>
     </div>
 
-    <div class="row wb-eqht wb-init mrgn-tp-lg">
+    <div class="row wb-eqht wb-init mrgn-tp-md">
         <div class="col-sm-6">
             <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 394px;">
                 <h3 class="mrgn-tp-sm">@Localizer["Shoreside"]</h3>
                 <p>@Localizer["textshoreside"]</p>
-                <a asp-page="Shoreside/AllCandidateShoreside" alt="@Localizer["altsearchshoreside"]" class="btn btn-primary">@Localizer["shoresidebutton"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" asp-page="Shoreside/AllCandidateShoreside" alt="@Localizer["altsearchshoreside"]" class="btn btn-primary">@Localizer["shoresidebutton"]</a>
             </div>
         </div>
 
@@ -47,7 +48,8 @@
             <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 394px;">
                 <h3 class="mrgn-tp-sm">@Localizer["Seagoing"]</h3>
                 <p>@Localizer["textseagoing"]</p>
-                <a asp-page="Seagoing/Index" alt="@Localizer["altsearchseagoing"]" class="btn btn-primary">@Localizer["seagoingbutton"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" asp-page="Seagoing/Index" alt="@Localizer["altsearchseagoing"]" class="btn btn-primary">@Localizer["seagoingbutton"]</a>
             </div>
         </div>
     </div>
