--- a/Web/Pages/Candidate/Seagoing/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Index.cshtml
@@ -3,33 +3,44 @@
 @{
     ViewData["Title"] = Localizer["Seagoing"];
 }
-    <section role="contentinfo">
-        <nav role="navigation" id="wb-bc" property="breadcrumb">
-            <h2>
-                @Localizer["You are here:"]
-            </h2>
-            <div class="row">
-                <ol class="breadcrumb">
-                    <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
-                    <li><a asp-page="../Index">@Localizer["Candidate"]</a></li>
-                    <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Seagoing"]</a></li>
-                </ol>
-            </div>
-        </nav>
-        <nav role="navigation">
-            <h2 class="wb-inv">Document navigation</h2>
-            <ul class="pager">
-                <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
-            </ul>
-        </nav>
-        <h2 class="mrgn-bttm-lg">@Localizer["Q1"]</h2>
+<section role="contentinfo">
+    <nav role="navigation" id="wb-bc" property="breadcrumb">
+        <h2>
+            @Localizer["You are here:"]
+        </h2>
         <div class="row">
-            <div class="col-sm-12">
-                <ul class="list">
-                    <li><a style="text-decoration:none" asp-page="Officer/Index">@Localizer["Officer"]</a></li>
-                    <li><a style="text-decoration:none" class="nav-link" asp-page="Crew/Index">@Localizer["Crew"]</a></li>
-                </ul>
+            <ol class="breadcrumb">
+                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="../Index">@Localizer["Candidate"]</a></li>
+                <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Seagoing"]</a></li>
+            </ol>
+        </div>
+    </nav>
+    <nav role="navigation">
+        <h2 class="wb-inv">Document navigation</h2>
+        <ul class="pager">
+            <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+        </ul>
+    </nav>
+   
+    <div class="cct-External-OffCrew-img cct-External-OffCrew-hide-mobile cct-External-OffCrew-hide-tablet">
+        <div class="container">
+            <div class="row mrgn-tp-lg mrgn-bttm-lg">
+                <div class="col-md-7">
+                    <h2>@Localizer["Q1"]</h2>
+                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
-    </section>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <ul class="list">
+                <li><a style="text-decoration:none" asp-page="Officer/Index">@Localizer["Officer"]</a></li>
+                <li><a style="text-decoration:none" class="nav-link" asp-page="Crew/Index">@Localizer["Crew"]</a></li>
+            </ul>
+        </div>
+    </div>
+</section>
 
