--- a/Web/Pages/Student/College/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Officer/Index.cshtml
@@ -25,9 +25,18 @@
             <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
         </ul>
     </nav>
+    <div class="cct-collegeofficer-img cct-collegeofficer-hide-mobile cct-collegeofficer-hide-tablet">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2 class="mrgn-bttm-xl">@Localizer["Q1"]</h2>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
 
-    <h2 class="mrgn-bttm-lg">@Localizer["Q1"]</h2>
-    <div class="row">
+    <div class="row mrgn-tp-md">
         <div class="col-sm-12">
             <ul class="list">
                 <li><a style="text-decoration:none" asp-page="Deck">@Localizer["Deck"]</a></li>
