--- a/Web/Pages/Student/College/Shoreside/Index.cshtml
+++ b/Web/Pages/Student/College/Shoreside/Index.cshtml
@@ -26,9 +26,18 @@
         </ul>
     </nav>
 
-    <h2 class="mrgn-bttm-lg">@Localizer["Q1"]</h2>
+    <div class="cct-collegeshore-img cct-collegeshore-hide-mobile cct-collegeshore-hide-tablet">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2 class="mrgn-bttm-xl">@Localizer["Q1"]</h2>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
 
-    <div class="row">
+   <div class="row mrgn-tp-md">
         <div class="col-sm-12">
             <ul class="list">
                 <li><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"] <span class="glyphicon glyphicon-new-window"></span></a></li>
