--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -23,7 +23,6 @@
             <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
         </ul>
     </nav>
-
     <div class="cct-student-img cct-student-hide-mobile cct-student-hide-tablet">
         <div class="container">
             <div class="row">
@@ -34,98 +33,33 @@
             </div>
         </div>
     </div>
-
-
     <div class="row wb-eqht mrgn-tp-lg ">
         <div class="col-sm-4">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 390px;">
+            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 400px;">
                 <h3 class="mrgn-tp-sm">@Localizer["HighSchool"]</h3>
                 <p>@Localizer["modaltextHS"]</p>
-                <a class="btn btn-primary pull-left" asp-page="HighSchool/Index">@Localizer["continue"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" class="btn btn-primary pull-left" asp-page="HighSchool/Index">@Localizer["continue"]</a>
             </div>
         </div>
 
         <div class="col-sm-4">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 390px;">
+            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 400px;">
                 <h3 class="mrgn-tp-sm">@Localizer["TechCollege"]</h3>
                 <p>@Localizer["modaltextTC"]</p>
-                <a class="btn btn-primary pull-left" asp-page="College/Index">@Localizer["continue"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" class="btn btn-primary pull-left" asp-page="College/Index">@Localizer["continue"]</a>
             </div>
         </div>
 
         <div class="col-sm-4">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 390px;">
+            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 400px;">
                 <h3 class="mrgn-tp-sm">@Localizer["University"]</h3>
                 <p>@Localizer["modaltextU"]</p>
-                <a class="btn btn-primary pull-left" asp-page="University/Index">@Localizer["continue"]</a>
+                <p>&nbsp;</p>
+                <a style="position:absolute; bottom:10px;" class="btn btn-primary pull-left" asp-page="University/Index">@Localizer["continue"]</a>
             </div>
         </div>
     </div>
     <div class="clearfix"></div>
-<!--
-    <div class="col-md-4 col-sm-4 mrgn-bttm-md">
-        <a style="text-decoration:none" class="overlay-lnk" href="#hs1" aria-controls="mid-screen" role="button">
-            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                <div class="img-container">
-                    <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["HighSchool"]</h3></figcaption>
-                    <img src="~/img/Student/Highschool.jpg" alt="@Localizer["PhotoHS"]" class="img-responsive center" />
-                </div>
-            </figure>
-        </a>
-        <section id="hs1" class="wb-overlay modal-content overlay-def wb-popup-mid">
-            <header class="modal-header">
-                <h2 class="modal-title">@Localizer["HighSchool"]</h2>
-            </header>
-            <div class="modal-body ">
-                <p>@Localizer["modaltextHS"]</p>
-                <a class="btn btn-primary pull-left" asp-page="HighSchool/Index">@Localizer["continue"]</a><button class="btn btn-default pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
-            </div>
-        </section>
-    </div>
-
-
-
-    <div class="col-md-4 col-sm-4 mrgn-bttm-md">
-        <a style="text-decoration:none" class="overlay-lnk" href="#tc1" aria-controls="mid-screen" role="button">
-            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                <div class="img-container">
-                    <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["TechCollege"]</h3></figcaption>
-                    <img src="~/img/Student/TechCollege.jpg" alt="@Localizer["PhotoTC"]" class="img-responsive center" />
-                </div>
-            </figure>
-        </a>
-        <section id="tc1" class="wb-overlay modal-content overlay-def wb-popup-mid">
-            <header class="modal-header">
-                <h2 class="modal-title">@Localizer["TechCollege"]</h2>
-            </header>
-            <div class="modal-body ">
-                <p>@Localizer["modaltextTC"]</p>
-                <a class="btn btn-primary pull-left" asp-page="College/Index">@Localizer["continue"]</a><button class="btn btn-default pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
-            </div>
-        </section>
-    </div>
-
-
-
-
-    <div class="col-md-4 col-sm-4 mrgn-bttm-md">
-        <a style="text-decoration:none" class="overlay-lnk" href="#u1" aria-controls="mid-screen" role="button">
-            <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                <div class="img-container">
-                    <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["University"]</h3></figcaption>
-                    <img src="~/img/Student/University.jpg" alt="@Localizer["PhotoU"]" class="img-responsive center" />
-                </div>
-            </figure>
-        </a>
-        <section id="u1" class="wb-overlay modal-content overlay-def wb-popup-mid">
-            <header class="modal-header">
-                <h2 class="modal-title">@Localizer["University"]</h2>
-            </header>
-            <div class="modal-body ">
-                <p>@Localizer["modaltextU"]</p>
-                <a class="btn btn-primary pull-left" asp-page="University/Index">@Localizer["continue"]</a><button class="btn btn-default pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
-            </div>
-        </section>
-    </div>
--->
 </section>
