--- a/Web/Pages/Student/University/Seagoing/Crew/Index.cshtml
+++ b/Web/Pages/Student/University/Seagoing/Crew/Index.cshtml
@@ -26,7 +26,16 @@
             </ul>
         </nav>
 
-        <h2 class="mrgn-bttm-lg">@Localizer["Q1"]</h2>
+        <div class="cct-U-Crew-img cct-U-Crew-hide-mobile cct-U-Crew-hide-tablet">
+            <div class="container">
+                <div class="row mrgn-tp-lg mrgn-bttm-lg">
+                    <div class="col-md-7">
+                        <h2>@Localizer["Q1"]</h2>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-sm-12">
                 <ul class="list">
