--- a/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
@@ -9,6 +9,7 @@
             <button type="button" aria-haspopup="true" aria-controls="glb-mn" aria-expanded="false" aria-label="Press the SPACEBAR to expand or the escape key to collapse this menu. Use the Up and Down arrow keys to choose a submenu item. Press the Enter or Right arrow key to expand it, or the Left arrow or Escape key to collapse it. Use the Up and Down arrow keys to choose an item on that level and the Enter key to access it."><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
             <ul id="glb-mn" role="menu" aria-orientation="vertical" data-ajax-replace="https://www.canada.ca/content/dam/canada/sitemenu/sitemenu-v2-en.html" class="wb-init wb-data-ajax-replace-inited">
                 <li role="presentation"><a role="menuitem" tabindex="0" asp-page="/Index">Home</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Overview">Overview</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/CCGMember/AllPositions">CCG Member</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Candidate/Index">External Candidate</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Student/Index">Student</a></li>
@@ -29,6 +30,7 @@ else
             <button type="button" aria-haspopup="true" aria-controls="glb-mn" aria-expanded="false" aria-label="Press the SPACEBAR to expand or the escape key to collapse this menu. Use the Up and Down arrow keys to choose a submenu item. Press the Enter or Right arrow key to expand it, or the Left arrow or Escape key to collapse it. Use the Up and Down arrow keys to choose an item on that level and the Enter key to access it."><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
             <ul id="glb-mn" role="menu" aria-orientation="vertical" data-ajax-replace="https://www.canada.ca/content/dam/canada/sitemenu/sitemenu-v2-en.html" class="wb-init wb-data-ajax-replace-inited">
                 <li role="presentation"><a role="menuitem" tabindex="0" asp-page="/Index">Accueil</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Overview">Aperçu</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/CCGMember/AllPositions">Membre de la GCC</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Candidate/Index">Candidat externe</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Student/Index">Étudiant</a></li>
