--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -35,38 +35,43 @@
         <div class="row">
             <h2 class="mrgn-tp-0">@Localizer["services"]</h2>
             <div class="wb-eqht wb-init wb-eqht-inited" id="wb-auto-4">
-                <section class="col-md-4" style="vertical-align: top; min-height: 163px;">
+                <section class="col-md-4" style="vertical-align: top;">
                     <h3>
                         <a asp-page="Overview">@Localizer["Overview"]</a>
                     </h3>
                     <p>@Localizer["brief"]</p>
                 </section>
-                <section class="col-md-4" style="vertical-align: top; min-height: 163px;">
+                <section class="col-md-4" style="vertical-align: top;">
                     <h3>
                         <a asp-page="CCGMember/AllPositions">@Localizer["member"]</a>
                     </h3>
                     <p>@Localizer["membersearch"]</p>
 
                 </section>
-                <section class="col-md-4" style="vertical-align: top; min-height: 163px;">
+                <section class="col-md-4" style="vertical-align: top;">
                     <h3>
                         <a asp-page="Candidate/Index">@Localizer["external"]</a>
                     </h3>
                     <p>@Localizer["externalsearch"]</p>
 
                 </section>
-                <section class="col-md-4" style="vertical-align: top; min-height: 138px;">
+                <section class="col-md-4" style="vertical-align: top;">
                     <h3>
                         <a asp-page="Student/Index">@Localizer["student"]</a>
                     </h3>
                     <p>@Localizer["studentsearch"]</p>
 
                 </section>
-                <section class="col-md-4" style="vertical-align: top; min-height: 138px;">
+
+                <section class="col-md-4" style="vertical-align: top;">
                     <h3>
                         <a asp-page="Feedback">@Localizer["feedback"]</a>
                     </h3>
                     <p>@Localizer["feedbacktext"]</p>
+                </section>
+                <section class="col-md-4" style="vertical-align: top;">
+                    <h3>@Localizer["RoP"]</h3>
+                    <p>@Localizer["RoPtext"]</p>
                 </section>
             </div>
         </div>
