--- a/Web/Pages/Student/HighSchool/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Index.cshtml
@@ -39,7 +39,7 @@
 
     <div class="row wb-eqht wb-init mrgn-tp-md">
         <div class="col-sm-6">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 420px;">
+            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 420px;">
                 <h3 class="mrgn-tp-0">@Localizer["Shoreside"]</h3>
                 <p>@Localizer["textshoreside"]</p>
                 <p>&nbsp;</p>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="col-sm-6">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 420px;">
+            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 420px;">
                 <h3 class="mrgn-tp-0">@Localizer["Seagoing"]</h3>
                 <p>@Localizer["textseagoing"]</p>
                 <p>&nbsp;</p>
