--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -33,9 +33,9 @@
             </div>
         </div>
     </div>
-    <div class="row wb-eqht mrgn-tp-lg ">
+    <div class="row wb-eqht wb-init mrgn-tp-md">
         <div class="col-sm-4">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 400px;">
+            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 400px;">
                 <h3 class="mrgn-tp-sm">@Localizer["HighSchool"]</h3>
                 <p>@Localizer["modaltextHS"]</p>
                 <p>&nbsp;</p>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="col-sm-4">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 400px;">
+            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 400px;">
                 <h3 class="mrgn-tp-sm">@Localizer["TechCollege"]</h3>
                 <p>@Localizer["modaltextTC"]</p>
                 <p>&nbsp;</p>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="col-sm-4">
-            <div class="well well-sm brdr-rds-0 position-relative" style="vertical-align: top; min-height: 400px;">
+            <div class="well well-sm brdr-rds-0 eqht-trgt position-relative" style="vertical-align: top; min-height: 400px;">
                 <h3 class="mrgn-tp-sm">@Localizer["University"]</h3>
                 <p>@Localizer["modaltextU"]</p>
                 <p>&nbsp;</p>
