--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -347,6 +347,7 @@
             </tr>
         </thead>
         <tbody>
+
             @if (Model.Position.JobDescriptionEng != "" && Model.Position.JobDescriptionFre != "")
             {
                 <tr>
@@ -356,6 +357,9 @@
                     <td colspan="2">@(isEnglish ? Model.Position.JobDescriptionEng : Model.Position.JobDescriptionFre)</td>
                 </tr>
             }
+            <tr>
+                <td colspan="2"><b>@Localizer["RoP"]</b> @Localizer["RoPtext"]</td>
+            </tr>
             <tr>
                 <th style="background-color:#f2f2f2" colspan="2">@Localizer["REGIONS"] <a title="@Localizer["linkmap"]" href="#map" aria-controls="mid-screen" class="overlay-lnk" role="button">@Localizer["linkmap"]</a></th>
             </tr>
@@ -375,26 +379,26 @@
                     <td colspan="2">@Localizer["noregions"]</td>
                 </tr>
             }
-                <section id="map" class="wb-overlay modal-content overlay-def wb-popup-mid">
-                    <header class="modal-header">
-                        <h2 class="modal-title">@Localizer["modalTitleMap"]</h2>
-                    </header>
-                    <div class="modal-body ">
-                        <div class="thumbnail img-responsive">
-                            <img src="~/img/region-ccg-gcc-canada.jpg" alt="@Localizer["altPhotoMap"]" class="img-responsive center" />
-                        </div>
-                        <details>
-                            <summary id="3">@Localizer["mapSummary"]</summary>
-                            <p>@Localizer["Arctic"]</p>
-                            <p>@Localizer["Western"]</p>
-                            <p>@Localizer["Central"]</p>
-                            <p>@Localizer["Atlantic"]</p>
-                            <p>@Localizer["CCG College"]</p>
-                            <p>@Localizer["National Headquarters"]</p>
-                        </details>
-                        <button class="btn btn-default pull-left mrgn-tp-md mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
+            <section id="map" class="wb-overlay modal-content overlay-def wb-popup-mid">
+                <header class="modal-header">
+                    <h2 class="modal-title">@Localizer["modalTitleMap"]</h2>
+                </header>
+                <div class="modal-body ">
+                    <div class="thumbnail img-responsive">
+                        <img src="~/img/region-ccg-gcc-canada.jpg" alt="@Localizer["altPhotoMap"]" class="img-responsive center" />
                     </div>
-                </section>
+                    <details>
+                        <summary id="3">@Localizer["mapSummary"]</summary>
+                        <p>@Localizer["Arctic"]</p>
+                        <p>@Localizer["Western"]</p>
+                        <p>@Localizer["Central"]</p>
+                        <p>@Localizer["Atlantic"]</p>
+                        <p>@Localizer["CCG College"]</p>
+                        <p>@Localizer["National Headquarters"]</p>
+                    </details>
+                    <button class="btn btn-default pull-left mrgn-tp-md mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
+                </div>
+            </section>
             <tr>
                 <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
             </tr>
