Included Rates of Pay in Top Menu

--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -70,7 +70,7 @@
                     <p>@Localizer["feedbacktext"]</p>
                 </section>
                 <section class="col-md-4" style="vertical-align: top;">
-                    <h3>@Localizer["RoP"]</h3>
+                    <h3><a href="@Localizer["RoPlink"]" target="_blank">@Localizer["RoP"]</a></h3>
                     <p>@Localizer["RoPtext"]</p>
                 </section>
             </div>
