--- a/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
@@ -14,6 +14,7 @@
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Candidate/Index">External Candidate</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Student/Index">Student</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Feedback">Feedback</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-eng.asp" target="_blank">Rates of Pay</a></li>
             </ul>
         </div>
     </nav>
@@ -35,11 +36,8 @@ else
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Candidate/Index">Candidat externe</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Student/Index">Étudiant</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="/Feedback">Rétroaction</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-fra.asp" target="_blank">Taux de rémunération</a></li>
             </ul>
         </div>
     </nav>
-
-
-
-
 }
