--- a/Web/Pages/Feedback.cshtml
+++ b/Web/Pages/Feedback.cshtml
@@ -16,15 +16,11 @@
 </nav>
 <section role="contentinfo">
     <h1 id="wb-cont">@Localizer["Title"]</h1>
-    <div class="col-lg-9 col-sm-9">
+    <div class="col-md-12 col-sm-12">
         <p class="mrgn-tp-md">@Localizer["para1"]</p>
         <p>@Localizer["para2"]</p>
     </div>
-    <div class="col-lg-3 col-sm-3">
-        <figure>
-            <img src="~/img/ForceGen-logo.png" class="img-responsive" />
-        </figure>
-    </div>
+    
 </section>
 
 
