Updates to Overview pages

--- a/Web/Pages/Overview.cshtml
+++ b/Web/Pages/Overview.cshtml
@@ -21,9 +21,12 @@
     <p>@Localizer["IntroText"]</p>
 
     <h2>@Localizer["Certifications"]</h2>
-    <p>@Localizer["CertText"]</p>
+    @Localizer["CertText"]
 
     <h2>@Localizer["Competencies"]</h2>
-    <p>@Localizer["CompText"]</p>
+    @Localizer["CompText"]
+
+    <h2>@Localizer["CompLevel"]</h2>
+    @Localizer["levels"]
 </div>
 <a class="btn btn-primary pull-left" asp-page="Homepage">@Localizer["continue"]</a>
