Inserted CCT cloud URL

--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -89,10 +89,10 @@
         </header>
         <div class="modal-body ">
             <ul class="list-unstyled colcount-xs-2">
-                <li><a href="mailto:?to=%20&amp;body=https%3A%2F%2Fwww.ccg-gcc.gc.ca%2Findex-eng.html%0A" class="shr-lnk email btn btn-default" target="_blank" rel="noreferrer noopener">@Localizer["Email"]</a></li>
-                <li><a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.ccg-gcc.gc.ca%2Findex-eng.html&amp;t=Canadian%20Coast%20Guard" class="shr-lnk facebook btn btn-default" target="_blank" rel="noreferrer noopener">Facebook</a></li>
-                <li><a href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fwww.ccg-gcc.gc.ca%2Findex-eng.html&amp;title=Canadian%20Coast%20Guard&amp;ro=false&amp;summary=&amp;source=" class="shr-lnk linkedin btn btn-default" target="_blank" rel="noreferrer noopener">LinkedIn®</a></li>
-                <li><a href="https://twitter.com/intent/tweet?text=Canadian%20Coast%20Guard&amp;url=https%3A%2F%2Fwww.ccg-gcc.gc.ca%2Findex-eng.html" class="shr-lnk twitter btn btn-default" target="_blank" rel="noreferrer noopener">Twitter</a></li>
+                <li><a href="@Localizer["emaillink"]" class="shr-lnk email btn btn-default" target="_blank" rel="noreferrer noopener">@Localizer["Email"]</a></li>
+                <li><a href="@Localizer["facebooklink"]" class="shr-lnk facebook btn btn-default" target="_blank" rel="noreferrer noopener">Facebook</a></li>
+                <li><a href="@Localizer["linkedinlink"]" class="shr-lnk linkedin btn btn-default" target="_blank" rel="noreferrer noopener">LinkedIn®</a></li>
+                <li><a href="@Localizer["twitterlink"]" class="shr-lnk twitter btn btn-default" target="_blank" rel="noreferrer noopener">Twitter</a></li>
             </ul>
             <p>@Localizer["sharetext"]</p>
             <button class="btn btn-primary pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
